--- a/index.html
+++ b/index.html
@@ -2,140 +2,103 @@
 <html lang="ja">
 
 <head>
-    <meta charset="utf-8">
-    <title>Shopping</title>
+    <meta charset="UTF-8">
+    <title>WEBお買い物計算メモ</title>
     <link rel="stylesheet" href="stylesheet.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="responsive.css">
-    <script type="text/javascript" src="macho/shopping.js"></script>
 </head>
 
 <body>
-    <header>
-        <h1>買い物リスト</h1>
-    </header>
+    <div id="app" class="container">
+        <header>
+            <h1>WEBお買い物計算メモ</h1>
+        </header>
 
-    <main>
-        <div class="container">
-            <div class="title">
-                <ul>
-                    <li></li>
-                    <li>商品名</li>
-                    <li>税抜価格</li>
-                    <li>税率</li>
-                    <li>税込価格</li>
-                    <li>個数</li>
-                </ul>
+        <main>
+            <table>
+                <tr>
+                    <th></th>
+                    <th>商品名</th>
+                    <th>税抜価格</th>
+                    <th>税率</th>
+                    <th>個数</th>
+                </tr>
+                <tr v-for="(item, index) in items">
+                    <td><button v-on:click="deleteForm(index)">×</button></td>
+                    <td><input class="name" v-model="item.name"></td>
+                    <td><input class="price" type="number" v-model="item.price">円</td>
+                    <td>
+                        <span class="taxRadio"><input type="radio" value="1.08" v-bind:name="'tax' + index"
+                                v-model="item.radio">8%</span>
+                        <span class="taxRadio"><input type="radio" value="1.1" v-bind:name="'tax' + index"
+                                v-model="item.radio">10%</span>
+                    </td>
+                    <td>
+                        <input type="number" class="quantity" v-model="item.quantity">個
+                    </td>
+                </tr>
+            </table>
+            <button v-on:click="addForm()">商品を追加</button>
+        </main>
+
+        <footer>
+            <h2>総計</h2>
+            <div class="displaySum">
+                <p>{{calcurateSumNotIncludingTax}}円(税抜)</p>
+                <p>{{calcurateSumIncludingTax}}円(税込)</p>
             </div>
-            <div class="form" id="form0">
-                <ul>
-                    <li><input type="submit" value="×" class="btn dlt" id="btnDlt0" onclick="deleteForm(this.id); calculateSum()"></li>
-                    <li><input type="text" class="item" id="itemForm0"></li>
-                    <li>
-                        <input type="number" class="price" id="priceForm0" oninput="calculatePriceIncludingTax(this.id); calculateSum()"><span class="en">円</span>
-                    </li>
-                    <li class="taxRate">
-                        <input type="radio" class="tax" name="tax0" id="tax8-0" checked="checked" onclick="calculatePriceIncludingTax(this.id); calculateSum()"><span>&nbsp; 8%</span><br class="sp">
-                        <input type="radio" class="tax" name="tax0" id="tax10-0" onclick="calculatePriceIncludingTax(this.id); calculateSum()"><span>10%</span>
-                    </li>
-                    <li>
-                        <input type="number" class="priceIncludingTax" id="priceIncludingTaxForm0" readonly><span class="en">
-              円</span>
-                    </li>
-                    <li><input type="number" class="quantity" id="quantityForm0" value="1" oninput="calculateSum()"></li>
-                </ul>
-            </div>
-            <div>
-                <input type="submit" value="+" class="btn pls" id="btnPls" onclick="addLine()">
-            </div>
-        </div>
-    </main>
-    <footer>
-        <h2 class="sum">合計</h2>
-        <input type="text" class="result" id="resultForm" readonly><span class="en">円</span>
-    </footer>
+        </footer>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
 
     <script>
-        let count = 0;
-
-        const deleteForm = (btnId) => {
-            const forms = document.getElementsByClassName("form");
-            if (forms.length > 1) {
-                //親要素の親要素の親要素を取得
-                let parent = document.getElementById(btnId).parentNode.parentNode.parentNode;
-                //フォームを一行削除
-                parent.remove();
-            } else {
-                forms[0].getElementsByClassName("item")[0].value = '';
-                forms[0].getElementsByClassName("price")[0].value = '';
-                forms[0].getElementsByClassName("tax")[0].checked = "checked";
-                forms[0].getElementsByClassName("priceIncludingTax")[0].value = '';
-                forms[0].getElementsByClassName("quantity")[0].value = 1;
+        new Vue({
+            el: "#app",
+            data() {
+                return {
+                    items: [{
+                        name: "",
+                        price: "",
+                        radio: "1.08",
+                        quantity: ""
+                    }]
+                };
+            },
+            methods: {
+                addForm() {
+                    this.items.push({
+                        name: "",
+                        price: "",
+                        radio: "1.08",
+                        quantity: ""
+                    });
+                },
+                deleteForm(index) {
+                    if (this.items.length >= 2) {
+                        this.items.splice(index, 1);
+                    } else {
+                        this.items[0].name = "";
+                        this.items[0].price = "";
+                        this.items[0].radio = "1.08";
+                        this.items[0].quantity = "";
+                    }
+                }
+            },
+            computed: {
+                calcurateSumNotIncludingTax: function () {
+                    let sum = 0;
+                    this.items.forEach(item => { sum += parseInt(item.price * item.quantity) });
+                    return String(sum).replace(/(\d)(?=(\d\d\d)+(?!\d))/g, '$1,');
+                },
+                calcurateSumIncludingTax: function () {
+                    let sum = 0;
+                    this.items.forEach(item => { sum += parseInt(item.price * item.quantity * item.radio) });
+                    return String(parseInt(sum)).replace(/(\d)(?=(\d\d\d)+(?!\d))/g, '$1,');
+                }
             }
-
-        }
-
-        //フォームを追加
-        const addLine = () => {
-
-            count++;
-
-            // 複製するHTML要素を取得
-            const forms = document.getElementsByClassName("form");
-            const form = forms[forms.length - 1];
-
-
-            // 複製
-            let clone_form = form.cloneNode(true);
-
-            // 複製した要素の属性を編集
-            // clone_form.getElementsByClassName("form")[0].id = `form${count}`;
-            clone_form.id = `form${count}`;
-
-            clone_form.getElementsByClassName("btn")[0].id = `btnDlt${count}`;
-
-            clone_form.getElementsByClassName("item")[0].value = '';
-            clone_form.getElementsByClassName("item")[0].id = `itemForm${count}`;
-
-            clone_form.getElementsByClassName("price")[0].value = '';
-            clone_form.getElementsByClassName("price")[0].id = `priceForm${count}`;
-
-            clone_form.getElementsByClassName("tax")[0].checked = "checked";
-            clone_form.getElementsByClassName("tax")[0].id = `tax8-${count}`;
-            clone_form.getElementsByClassName("tax")[1].id = `tax10-${count}`;
-            clone_form.getElementsByClassName("tax")[0].name = `tax${count}`;
-            clone_form.getElementsByClassName("tax")[1].name = `tax${count}`;
-
-            clone_form.getElementsByClassName("priceIncludingTax")[0].value = '';
-            clone_form.getElementsByClassName("priceIncludingTax")[0].id = `priceIncludingTaxForm${count}`;
-
-            clone_form.getElementsByClassName("quantity")[0].value = 1;
-
-            // 複製したHTML要素をページに挿入
-            form.after(clone_form);
-        }
-
-        const calculatePriceIncludingTax = (id) => {
-            let parent = document.getElementById(id).parentNode.parentNode.parentNode;
-            let price = parent.getElementsByClassName("price")[0].value;
-            let radio = parent.getElementsByClassName("tax");
-            let taxRate = Number(radio[0].checked) * 1.08 + Number(radio[1].checked) * 1.1;
-            parent.getElementsByClassName("priceIncludingTax")[0].value = Math.round(price * taxRate * 100) / 100;
-        }
-        const calculateSum = () => {
-            let result = 0;
-            let priceIncludingTaxes = document.getElementsByClassName("priceIncludingTax");
-            let quantity = document.getElementsByClassName("quantity");
-            for (let i = 0; i < priceIncludingTaxes.length; i++) {
-                result = result + priceIncludingTaxes[i].value * quantity[i].value;
-            }
-            document.getElementById("resultForm").value = Math.round(result);
-
-
-
-        }
+        });
     </script>
-
 </body>
 
 </html>
