金額入力フォームをtelに変更

--- a/macho/shopping.html
+++ b/macho/shopping.html
@@ -31,7 +31,7 @@
                             onclick="deleteForm(this.id); calculateSum()"></li>
                     <li><input type="text" class="item" id="itemForm0"></li>
                     <li>
-                        <input type="number" class="price" id="priceForm0" oninput="calculateSum()"><span
+                        <input type="tel" class="price" id="priceForm0" oninput="calculateSum()"><span
                             class="en">円</span>
                     </li>
                     <li class="taxRate">
@@ -40,7 +40,7 @@
                         <input type="radio" class="tax" name="tax0" id="tax10-0"
                             onclick="calculateSum()"><span>10%</span>
                     </li>
-                    <li><input type="number" class="quantity" id="quantityForm0" value="1" oninput="calculateSum()">
+                    <li><input type="tel" class="quantity" id="quantityForm0" value="1" oninput="calculateSum()">
                     </li>
                 </ul>
             </div>
