--- a/tausho/index.html
+++ b/tausho/index.html
@@ -27,7 +27,7 @@
                 <tr v-for="(item, index) in items">
                     <td><a href="#" class = "btn delete" v-on:click="deleteForm(index)">ー</a></td>
                     <td><input class="name" v-model="item.name"></td>
-                    <td><input class="price" type="tel" v-model="item.price"><span class="unit">円</span></td>
+                    <td><input class="price" type="tel" v-model="item.price"></td>
                     <td>
                         <span class="taxRadio"><input type="radio" value="1.08" v-bind:name="'tax' + index"
                                 v-model="item.radio">8%</span>
@@ -35,7 +35,9 @@
                                 v-model="item.radio">10%</span>
                     </td>
                     <td>
-                        <input type="tel" class="quantity" v-model="item.quantity"><span class="unit">個</span>
+                        <a href="#" class = "btn increment" v-on:click="decrementNum(index)">ー</a>
+                        {{item.quantity}}
+                        <a href="#" class = "btn decrement" v-on:click="incrementNum(index)">＋</a>
                     </td>
                 </tr>
             </table>
@@ -65,7 +67,7 @@
                         name: "",
                         price: "",
                         radio: "1.08",
-                        quantity: ""
+                        quantity: "0"
                     }]
                 };
             },
@@ -75,7 +77,7 @@
                         name: "",
                         price: "",
                         radio: "1.08",
-                        quantity: ""
+                        quantity: "0"
                     });
                 },
                 deleteForm(index) {
@@ -85,7 +87,15 @@
                         this.items[0].name = "";
                         this.items[0].price = "";
                         this.items[0].radio = "1.08";
-                        this.items[0].quantity = "";
+                        this.items[0].quantity = "0";
+                    }
+                },
+                incrementNum(index){
+                    this.items[index].quantity = parseInt(this.items[index].quantity) + 1;
+                },
+                decrementNum(index){
+                    if(parseInt(this.items[index].quantity)>0){
+                        this.items[index].quantity = parseInt(this.items[index].quantity) - 1;
                     }
                 }
             },
